fix: Skills logos too big on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,10 @@ a[href="#greetings"] span {
   align-content: center;
 }
 
+.skill-logo {
+  width: 80px;
+}
+
 /*** Projects section ***/
 .project {
   position: relative;
